move icon before text and fix spacing

--- a/assets/src/application/ui/styles/root/buttons.css
+++ b/assets/src/application/ui/styles/root/buttons.css
@@ -89,6 +89,12 @@
 	vertical-align: middle;
 }
 
+.esprs-button.ant-btn > .anticon + span,
+.esprs-button.ant-btn > span + .anticon {
+	margin-left: var(--ee-margin-smaller);
+	vertical-align: middle;
+}
+
 .esprs-button .img-wrap span {
 	line-height: 24px;
 }
